--- a/find_phases.ipynb
+++ b/find_phases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "from tables import NoSuchNodeError\n",
     "from tqdm import tqdm\n",
     "from tslearn.clustering import TimeSeriesKMeans\n",
-    "from utils import compute_consecutive_sequences\n",
+    "from utils import compute_consecutive_sequences, clean_on_length, clean_on_mode\n",
     "\n",
     "from tabata import Opset, Selector\n",
     "from checks import health_check\n",
@@ -6236,21 +6236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting phases on whole dataset...\n"
+      "Fitting on whole dataset...\n",
+      "Predicting phases on mini dataset...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 31/31 [00:00<00:00, 37.54it/s]\n"
+      "100%|██████████| 31/31 [00:01<00:00, 22.76it/s]\n"
      ]
     },
     {
@@ -6264,7 +6265,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 997/997 [00:49<00:00, 20.02it/s]\n"
+      "100%|██████████| 997/997 [01:12<00:00, 13.71it/s]\n"
      ]
     }
    ],
@@ -6301,212 +6302,42 @@
     "    return cols\n",
     "\n",
     "\n",
-    "def blacklist_on_mode(df):\n",
-    "    rolling_window = 300\n",
-    "    df[output_col] = (\n",
-    "        df[output_col + \"_temp\"]\n",
-    "        .rolling(rolling_window, center=True)\n",
-    "        .apply(lambda x: int(x.mode()[0]))\n",
-    "    )\n",
-    "    df[output_col].iloc[:rolling_window] = df[output_col + \"_temp\"].iloc[\n",
-    "        :rolling_window\n",
-    "    ]\n",
-    "    df[output_col].iloc[-rolling_window:] = df[output_col + \"_temp\"].iloc[\n",
-    "        -rolling_window:\n",
-    "    ]\n",
-    "    df[output_col] = df[output_col].astype(int)\n",
-    "    df = df.drop(labels=[output_col + \"_temp\"], axis=1)\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def blacklist_on_length(df, output_col, threshold=2):\n",
-    "    def update_df_cl(row):\n",
-    "        df[output_col].iloc[row[\"beginning\"] : row[\"ending\"]] = row[\"output_col\"]\n",
-    "        return row\n",
-    "\n",
-    "    sequences = compute_consecutive_sequences(df[output_col])\n",
-    "    whitelisted_sequences = sequences[sequences[\"length\"] > 2 * 60]\n",
-    "    whitelisted_sequences[\"ending\"] = whitelisted_sequences.shift(-1)[\"beginning\"]\n",
-    "    whitelisted_sequences[\"ending\"].iloc[-1] = len(df)\n",
-    "    whitelisted_sequences[\"ending\"] = whitelisted_sequences[\"ending\"].astype(int)\n",
-    "    whitelisted_sequences.apply(update_df_cl, axis=1)\n",
-    "    return df\n",
-    "\n",
     "def apply_cluster(cluster, ds, columns, output_col=\"CL\"):\n",
     "    features = get_features(ds, columns)\n",
     "    Y = cluster.predict(features)\n",
     "    ds.rewind()\n",
     "    current_row = 0\n",
-    "    print(\"Predicting phases on whole dataset...\")\n",
     "    for df in tqdm(ds):\n",
-    "        df[output_col + \"_temp\"] = Y[current_row : current_row + len(df)]\n",
+    "        df[output_col] = Y[current_row : current_row + len(df)]\n",
     "        current_row += len(df)\n",
-    "        df = blacklist_on_length(df, output_col)\n",
+    "        df[output_col] = clean_on_length(df[output_col], 10)\n",
     "        ds.put(df)\n",
     "\n",
     "\n",
     "columns = [\n",
     "    \"ALT [ft]\",\n",
-    "    \"M [Mach]\",\n",
+    "    # \"M [Mach]\",\n",
     "]\n",
     "output_col = \"CL\"\n",
     "features = get_features(mini_ds, columns)\n",
-    "print(\"Fitting on mini dataset..\")\n",
+    "print(\"Fitting on mini dataset...\")\n",
     "cluster = KMeans(n_clusters=4)\n",
     "cluster.fit(features)\n",
+    "print(\"Predicting phases on mini dataset...\")\n",
     "apply_cluster(cluster, mini_ds, columns, output_col=output_col)\n",
+    "print(\"Predicting phases on whole dataset...\")\n",
     "apply_cluster(cluster, ds, columns, output_col=output_col)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>beginning</th>\n",
-       "      <th>ending</th>\n",
-       "      <th>output_col</th>\n",
-       "      <th>length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   beginning  ending  output_col  length\n",
-       "0          0       1           0       2\n",
-       "1          2       2           2       1\n",
-       "2          3       4           1       2\n",
-       "3          5       5           0       1"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "s = pd.Series([0, 0, 2, 1, 1, 0])\n",
-    "compute_consecutive_sequences(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 997/997 [00:15<00:00, 65.65it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'record_10': array([1012, 4238]),\n",
-       " 'record_380': array([2206, 6255]),\n",
-       " 'record_439': array([2181, 6035]),\n",
-       " 'record_514': array([  800, 12642]),\n",
-       " 'record_555': array([2779, 7209]),\n",
-       " 'record_740': array([ 895, 5150])}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def compute_attempted_landing(df, true_value=1, minimum_distance=2):\n",
-    "    whitelisted_sequences = compute_consecutive_sequences(df[output_col], threshold=2)\n",
-    "    sequences = whitelisted_sequences[whitelisted_sequences[\"output_col\"] == true_value]\n",
-    "    sequences[\"distance\"] = (\n",
-    "        sequences[\"beginning\"].shift(-1) - sequences[\"ending\"]\n",
-    "    ).fillna(np.inf)\n",
-    "    return sequences[sequences[\"distance\"] > 60 * minimum_distance]\n",
-    "\n",
-    "\n",
-    "def check_aborted_sequence(ds, sequence_value=1, minimum_distance=2):\n",
-    "    ds.rewind()\n",
-    "    true_value = ds.df[\"CL\"].iloc[1200]\n",
-    "    sequences = {}\n",
-    "    for df in tqdm(ds):\n",
-    "        current_sequences = compute_attempted_landing(\n",
-    "            df, sequence_value, minimum_distance\n",
-    "        )\n",
-    "        if len(current_sequences) > 1:\n",
-    "            sequences[df.index.name] = current_sequences[\"beginning\"].values\n",
-    "    return sequences\n",
-    "\n",
-    "\n",
-    "check_aborted_sequence(ds, minimum_distance=10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c825bda5ec04579991ce395388dfe8b",
+       "model_id": "149f4e614b664127926c34fa7e844e24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -6519,7 +6350,122 @@
     }
    ],
    "source": [
-    "ds.sigpos = ds.records.index(\"/record_740\")\n",
+    "mini_ds.plot(phase=output_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60069894b5404b0eb43f9a1b27dfd76e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='Variable :', options=('ALT [ft]', 'EGT_1 [deg C]', 'EGT_2 …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds.sigpos = ds.records.index(\"/record_380\")\n",
+    "ds.plot(phase=output_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 997/997 [00:20<00:00, 48.84it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'record_10': array([1072, 4472]),\n",
+       " 'record_183': array([1248, 3089]),\n",
+       " 'record_267': array([1040, 2042]),\n",
+       " 'record_351': array([1046, 2024]),\n",
+       " 'record_380': array([1249, 2222, 6267]),\n",
+       " 'record_439': array([2172, 6510]),\n",
+       " 'record_500': array([1515, 2859]),\n",
+       " 'record_510': array([1072, 2385]),\n",
+       " 'record_514': array([  905, 12673]),\n",
+       " 'record_555': array([3024, 7251]),\n",
+       " 'record_605': array([4871, 5795]),\n",
+       " 'record_740': array([1408, 5119]),\n",
+       " 'record_747': array([3078, 4145]),\n",
+       " 'record_756': array([1162, 2059]),\n",
+       " 'record_865': array([ 930, 5729]),\n",
+       " 'record_90': array([1350, 1720]),\n",
+       " 'record_901': array([1592, 6474]),\n",
+       " 'record_949': array([1562, 2566])}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compute_attempted_landing(df, true_value=1, minimum_distance=2, minimum_duration=20):\n",
+    "    whitelisted_sequences = compute_consecutive_sequences(df[output_col], minimum_duration=minimum_duration)\n",
+    "    sequences = whitelisted_sequences[whitelisted_sequences[\"output_col\"] == true_value]\n",
+    "    sequences[\"distance\"] = (\n",
+    "        sequences[\"beginning\"].shift(-1) - sequences[\"ending\"]\n",
+    "    ).fillna(np.inf)\n",
+    "    return sequences[sequences[\"distance\"] > minimum_distance]\n",
+    "\n",
+    "\n",
+    "def check_aborted_sequence(ds, minimum_distance, minimum_duration):\n",
+    "    ds.rewind()\n",
+    "    true_value = ds.df[\"CL\"].iloc[1200]\n",
+    "    sequences = {}\n",
+    "    for df in tqdm(ds):\n",
+    "        current_sequences = compute_attempted_landing(\n",
+    "            df, true_value, minimum_distance, minimum_duration\n",
+    "        )\n",
+    "        if len(current_sequences) > 1:\n",
+    "            sequences[df.index.name] = current_sequences[\"beginning\"].values\n",
+    "    return sequences\n",
+    "\n",
+    "\n",
+    "check_aborted_sequence(ds, minimum_distance=5*60, minimum_duration=60)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c297d34462b3444898225c0329f08569",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='Variable :', options=('ALT [ft]', 'EGT_1 [deg C]', 'EGT_2 …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds.sigpos = ds.records.index(\"/record_90\")\n",
     "# ds.sigpos = ds.records[615]\n",
     "ds.plot(phase=\"CL\")"
    ]
